// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Newrelic Alert Plugin getApiGatewayAlertsCloudFormation should generate alerts for all api gateways 1`] = `
Object {
  "ApiGateway4XxErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ApiGatewaySample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "apiName": Array [
                  "api-gatway",
                  "api-gatway2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "Api Gateway 4 XX Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.4xxError.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "ApiGateway5XxErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ApiGatewaySample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "apiName": Array [
                  "api-gatway",
                  "api-gatway2",
                ],
              },
            },
          ],
        },
        "integration_provider": undefined,
        "name": "Api Gateway 5 XX Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.5xxError.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getDynamoDbAlertsCloudFormation should generate alerts for all dynamo tables 1`] = `
Object {
  "DynamoDbBatchGetSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Batch Get System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.batchGetSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbBatchWriteSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Batch Write System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.batchWriteSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbDeleteSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Delete System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.deleteSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbGetSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Get System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.getSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbPutSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Put System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.putSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbQuerySystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Query System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.querySystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbScanSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Scan System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.scanSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbUpdateSystemErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db Update System Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.updateSystemErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "DynamoDbUserErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "DatastoreSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "tableName": Array [
                  "dynamo-table",
                  "dynamo-table2",
                ],
              },
            },
          ],
        },
        "integration_provider": "DynamoDbTable",
        "name": "Dynamo Db User Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.userErrors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getFunctionAlertsCloudFormation should generate global alerts for all functions 1`] = `
Object {
  "FunctionDuration1SecInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 1000,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-service-test-function",
                  "test-service-test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": "LambdaFunction",
        "name": "Function Duration 1 Sec",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.duration.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "FunctionErrorsInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-service-test-function",
                  "test-service-test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": "LambdaFunction",
        "name": "Function Errors",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.errors.Sum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
  "FunctionThrottlesInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-service-test-function",
                  "test-service-test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": "LambdaFunction",
        "name": "Function Throttles",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.throttles.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getFunctionAlertsCloudFormation should generate local defined alerts functions 1`] = `
Object {
  "TestFunction2FunctionDuration1SecInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 1000,
        },
        "enabled": true,
        "event_type": "ServerlessSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "displayName": Array [
                  "test-service-test-function-2",
                ],
              },
            },
          ],
        },
        "integration_provider": "LambdaFunction",
        "name": "Test Function 2 Function Duration 1 Sec",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.duration.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;

exports[`Newrelic Alert Plugin getPolicyCloudFormation should generate valid policy 1`] = `
Object {
  "TestServiceTestNewRelicPolicy": Object {
    "Properties": Object {
      "ServiceToken": "policy-token",
      "policy": Object {
        "incident_preference": undefined,
        "name": "TestService TEST",
      },
    },
    "Type": "Custom::NewRelicPolicy",
  },
}
`;

exports[`Newrelic Alert Plugin getPolicyCloudFormation should generate valid policy with custom name 1`] = `
Object {
  "CustomPolicyNameTestNewRelicPolicy": Object {
    "Properties": Object {
      "ServiceToken": "policy-token",
      "policy": Object {
        "incident_preference": undefined,
        "name": "Custom policy name TEST",
      },
    },
    "Type": "Custom::NewRelicPolicy",
  },
}
`;

exports[`Newrelic Alert Plugin getSqsAlertsCloudFormation should generate alerts for all dead letter queues 1`] = `
Object {
  "SqsDlqVisibleMessagesInfrastructureCondition": Object {
    "Properties": Object {
      "ServiceToken": "infrastructure-condition-token",
      "data": Object {
        "comparison": "above",
        "critical_threshold": Object {
          "duration_minutes": 5,
          "time_function": "all",
          "value": 3,
        },
        "enabled": true,
        "event_type": "QueueSample",
        "filter": Object {
          "and": Array [
            Object {
              "in": Object {
                "queueName": Array [
                  "simple-queue-dlq",
                ],
              },
            },
          ],
        },
        "integration_provider": "SqsQueue",
        "name": "Sqs Dlq Visible Messages",
        "policy_id": Object {
          "Ref": "TestServiceTestNewRelicPolicy",
        },
        "runbook_url": undefined,
        "select_value": "provider.approximateNumberOfMessagesVisible.Maximum",
        "type": "infra_metric",
        "violation_close_timer": 24,
      },
      "policy_id": Object {
        "Ref": "TestServiceTestNewRelicPolicy",
      },
    },
    "Type": "Custom::NewRelicInfrastructureCondition",
  },
}
`;
